# study

./: .gitignore  .gitmodules  README.md
ai.experiments/adk.crash.course/: README.md  pyproject.toml
ai.experiments/adk.crash.course/5-session-state-runner/: session_basics.py
fluent.python/: pyproject.toml  pyrightconfig.json
fluent.python/ch-01/: card-deck.py  vector.py
fluent.python/ch-02/: genexps.py  listcomps.py  named-tuples.py  unapcking.py
fluent.python/ch-06/: strategy-classes.py  strategy-functions.py
fluent.python/ch-07/: closures.py  strategy-decorators.py
fluent.python/ch-17/: context_managers.py
fluent.python/ch-18/: coroutines.py
fluent.python/ch_01/: card_deck.py  vector.py
fluent.python/ch_02/: genexps.py  listcomps.py  named_tuples.py
fluent.python/ch_06/: strategy_classes.py  strategy_functions.py
fluent.python/ch_07/: closures.py  strategy_decorators.py
fluent.python/ch_17/: context_managers.py
fluent.python/ch_18/: coroutines.py
fluent.python/experiments/ab_asyncio/: ab_tasks.py  af_events.py  utils.py
fluent.python/experiments/ac_anyio/: aa_basics.py  utils.py
fluent.python/experiments/ad_trio/: aa_basics.py  utils.py
fluent.python/experiments/ae_pydantic/: ab_base_model.py  ac_fields.py  ad_custom_validators.py  ag_serialization.py
fluent.python/experiments/af_typechecking/: ac_stubs.py  ad_constants.py
fluent.python/experiments/ah_rich/: aa_demo.py
fluent.python/experiments/anyio/: 01_basics.py  utils.py
fluent.python/experiments/async-io/: 01_basics.py  02_tasks.py  03_futures.py  04_locks.py  05_semaphores.py  06_events.py  utils.py
fluent.python/experiments/async_io/: aa_basics.py  ac_futures.py  ad_locks.py  ae_semaphores.py
fluent.python/experiments/py_dantic/: aa_basics.py  ac_fields.py  ad_custom_validators.py  ae_computed_fields.py  af_nested_models.py
fluent.python/experiments/pydantic/: 01_basics.py  02_base_model.py  03_fields.py  04_custom_validators.py  05_computed_fields.py  06_nested_models.py  07_serialization.py
fluent.python/experiments/trio/: 01_basics.py  utils.py
fluent.python/experiments/type-checking/: 01_basics.py  02_generic_types.py  03_stubs.py  04_constants.py
fluent.python/experiments/type_checking/: aa_basics.py  ab_generic_types.py
game.dev/pyglet/: pyproject.toml
game.dev/pyglet/ninja.wars/: requirements.txt
game.dev/pyglet/pong/: game.py  main.py
gen.ai/udemy.ed.donner/: .claudeignore  .gitignore  CLAUDE.md  pyproject.toml
gen.ai/udemy.ed.donner/.claude/: settings.local.json
gen.ai/udemy.ed.donner/week1/: day1.ipynb  scraper.py
learn.cpp/: .gitignore  CMakeLists.txt  lectures.h  main.cpp
learn.cpp/ch.01/: lecture_1_11.cpp  quiz_1_x_3.cpp
learn.cpp/ch.02/: lecture_2_3.cpp  quiz_2_3_5.cpp
learn.cpp/ch.02/lecture_2_7/: Makefile  add.cpp  add.hpp  io.cpp  io.hpp  main.cpp
learn.cpp/ch.04/lecture_4_3/: Makefile  main  main.cpp
learn.cpp/ch.04/quiz_4_10_1/: Makefile  main  main.cpp
learn.cpp/ch.04/quiz_4_x_3/: Makefile  io.cpp  io.hpp  main.cpp
learn.cpp/ch.04/quiz_4_x_4/: Makefile  constants.hpp  io.cpp  io.hpp  main  main.cpp
learn.cpp/ch.05/lecture_5_4/: main.cpp
learn.cpp/ch.05/lecture_5_6/: Makefile  main  main.cpp
learn.cpp/ch.05/quiz_5_3_2/: io.cpp  io.hpp  main  main.cpp
learn.cpp/ch.06/quiz_6_3_1/: Makefile  io.cpp  io.hpp  main  main.cpp
learn.cpp/ch.06/quiz_6_x_3/: Makefile  main  main.cpp
learn.cpp/ch_00/lec_12/: lecture_00_12.cpp  lecture_00_12.h  lecture_12.cpp
learn.cpp/ch_01/lec_11/: lecture_11.cpp  lecture_11.h
learn.cpp/ch_01/lec_xx/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_02/lec_03/: lecture_03.cpp  lecture_03.h  quiz_05.cpp  quiz_05.h
learn.cpp/ch_02/lec_07/: add.cpp  add.h  io.cpp  io.h  lecture_07.cpp  lecture_07.h
learn.cpp/ch_04/lec_03/: lecture_03.cpp  lecture_03.h
learn.cpp/ch_04/lec_10/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_04/lec_xx/: quiz_03.cpp  quiz_03.h  quiz_04.cpp  quiz_04.h
learn.cpp/ch_05/lec_03/: quiz_02.cpp  quiz_02.h
learn.cpp/ch_05/lec_04/: lecture_04.cpp  lecture_04.h
learn.cpp/ch_05/lec_06/: lecture_06.cpp  lecture_06.h
learn.cpp/ch_06/lec_03/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_06/lec_xx/: quiz_03.cpp  quiz_03.h
learn.cpp/ch_08/lec_01/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_08/lec_02/: quiz_02.cpp  quiz_02.h
learn.cpp/ch_08/lec_05/: quiz_01.cpp  quiz_01.h  quiz_02.cpp  quiz_02.h
learn.cpp/ch_08/lec_xx/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_09/lec_02/: quiz_02.cpp  quiz_02.h
learn.cpp/ch_09/lec_03/: quiz_02.cpp  quiz_02.h
learn.cpp/ch_09/lec_04/: lecture_04.cpp  lecture_04.h  quiz_03.cpp  quiz_03.h
learn.cpp/ch_09/lec_11/: quiz_02.cpp  quiz_02.h
learn.cpp/ch_09/lec_14/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_09/lec_19/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_09/lec_xx/: quiz_01.cpp  quiz_01.h  quiz_02.cpp  quiz_02.h  quiz_04.cpp  quiz_04.h  quiz_07.cpp  quiz_07.h
learn.cpp/ch_10/lec_09/: quiz_01.cpp  quiz_01.h
learn.cpp/ch_10/lec_10/: quiz_01.cpp  quiz_01.h  quiz_02.cpp  quiz_02.h  quiz_03.cpp  quiz_03.h
learn.cpp/ch_10/lec_15/: quiz_01.cpp  quiz_01.h  quiz_02.cpp  quiz_02.h
learn.cpp/ch_10/lec_16/: quiz_03.cpp  quiz_03.h
learn.cpp/ch_10/lec_xx/: quiz_03.cpp  quiz_03.h
learn.cpp/extra_01/: extra_01.cpp  extra_01.h
py.for.data.analysis/: AGENTS.md  iterators-generators.ipynb  loading-data.ipynb  numpy-examples.ipynb  pandas-example.ipynb  pyproject.toml  test-notebook.ipynb
py.for.data.analysis/exercises/: numpy.ipynb
py.for.data.analysis/lectures/: iterators-generators.ipynb  loading-data.ipynb  numpy-examples.ipynb  pandas-example.ipynb  test-notebook.ipynb
py.for.data.analysis/notes/: ci_and_pi_rendering.md  iterators_and_iterables.md  jax_basics.md  matplotlib_basics.md  numpy_basics.md  numpy_indexing.md  pandas_casting_and_types.md  pandas_data_structures.md  pandas_grouping_aggregation.md  pandas_merging_joining.md  pandas_misc_operations.md  pandas_multi_index.md  pandas_object_dtype.md  pandas_sanitization.md  pearsonr_and_p_value.md  profiling_and_timing.md  statistical_significance_and_p_value.md  understanding_meshgrid.md
(+1651 files in other folders)
