[project]
name = "fluent-python-exercises"
version = "0.0.0"
description = "Code examples from Fluent Python study"
authors = [{ name = "Andrei Fecioru" }]
requires-python = ">=3.12"
dependencies = [
  "anyio==4.12.0",
  "pyyaml>=6.0.3",
  "rich>=14.2.0",
  "textual>=6.8.0",
  "types-pyyaml>=6.0.12.20250915",
]
