[project]
name = "adk-crash-course"
version = "0.0.0"
description = "ADK Crash Course"
authors = [{ name = "Andrei Fecioru" }]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "google-adk",
    "pydantic>=2.0.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
]

[mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
