[project]
name = "llm-engineering-course"
version = "0.1.0"
description = "LLM Engineering Course - 8 Week Practical Labs"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipython>=8.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.6.0",
    "nbqa>=1.8.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true